<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:title="@string/salary_calendar"
        android:titleTextAppearance="@style/tooBarTitle"
        app:layout_constraintBottom_toTopOf="@+id/calendarView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31"
        app:mcv_dateTextAppearance="@style/CalendarDaysCustomText"
        app:mcv_headerTextAppearance="@style/CalendarMonthCustomText"
        app:mcv_selectionColor="#66ccff"
        app:mcv_showOtherDates="none"
        app:mcv_weekDayTextAppearance="@style/CalendarDaysCustomText">

    </com.prolificinteractive.materialcalendarview.MaterialCalendarView>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="230dp"
        android:layout_marginBottom="68dp"
        android:onClick="deleteButtonProcedure"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/shiftButton"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="230dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="68dp"
        android:onClick="shiftButtonProcedure"
        android:text="@string/add_shift"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Calculate_Button"
        android:layout_width="347dp"
        android:layout_height="42dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="130dp"
        android:onClick="calculateButtonProcedure"
        android:text="@string/calculate_pay_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/Calculate_Button_Done"
        android:layout_width="347dp"
        android:layout_height="42dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="130dp"
        android:onClick="calculateButtonDoneProcedure"
        android:text="@string/click_button_to_exit_paycheck_mode"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/invoiceButton"
        android:layout_width="347dp"
        android:layout_height="42dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="72dp"
        android:onClick="showInvoiceProcedure"
        android:text="@string/click_button_to_show_total_invoice"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>